# bayes-coloc

./: LICENSE  README.md  pyproject.toml
Test examples/: continuos donut example.ipynb
bayes-coloc/: __init__.py  continuous_donut_interaction.py  latent_state.py  optimized_swap_proposal.py  plot_matching_lines.py  poisson_mcmc.py
bayes_coloc/: __init__.py  blob_detection_wraper.py  continuous_donut_interaction.py  donut_interaction.py  exact_computations_for_poisson_model.py  gaussian_interaction.py  kernel_creation_params.pkl  latent_space.py  latent_state.py  mygraph.py  optimized_swap_proposal.py  slow_latent_space.py
bayesian-coloc/: continuous_donut_interaction.py  donut.py
examples/: basic_example.ipynb  continuos donut example.ipynb  large_dataset example.ipynb  test.py  test_against_exact.ipynb
plots-for-paper/: continuous_donut_plots.ipynb
simulations-for-paper/comparison_on_simulated_images/: create_example_data.py  our_analysis_setting_1.ipynb  our_analysis_setting_2.ipynb  our_analysis_setting_3.ipynb  our_analysis_setting_4.ipynb  output_coloc_studio_setting_1.xls  output_coloc_studio_setting_2.xls  output_coloc_studio_setting_3.xls  output_coloc_studio_setting_4.xls  plot_setup.py
simulations-for-paper/comparison_on_simulated_images/data/: channel_A_setting_1.tif  channel_A_setting_1.xml  channel_A_setting_2.tif  channel_A_setting_2.xml  channel_A_setting_3.tif  channel_A_setting_3.xml  channel_A_setting_4.tif  channel_A_setting_4.xml  channel_B_setting_1.tif  channel_B_setting_1.xml  channel_B_setting_2.tif  channel_B_setting_2.xml  (+8 more)
